# SIOpanel

./: .gitignore  CMakeLists.txt  SIOpanel.conf  SIOpanel.toml
src/: App.cpp  app.cpp  app_component.h  app_component.hpp  config.cpp  config.h  control_utils.cpp  control_utils.h  templates.cpp  utils.cpp  utils.h
src/controller/: controller.hpp
src/controllers/: control.cpp  main_controller.cpp  main_controller.h  ping.cpp
templates/: 403.html  command_failed.html  control_panel.html  result.html
